# patient-to-patient-similarity-search

./: .gitignore  README.md  pyproject.toml
examples/: cohort.example.json  config.example.json  run_example.md
patient_similarity/: cli.py  pipeline.py
patient_similarity/config/: __init__.py  defaults.py  schema.py
patient_similarity/distance/: __init__.py  base.py  information_content.py  lin.py
patient_similarity/domain/: __init__.py  events.py  patients.py  results.py
patient_similarity/io/: __init__.py  input_json.py  output_json.py
patient_similarity/matching/: __init__.py  assignment.py  base.py  event_features.py
patient_similarity/ontology/: __init__.py  base.py  snomed.py
patient_similarity/preprocessing/: __init__.py  deduplicate.py  hierarchy_pruning.py  normalize.py  pipeline.py
patient_similarity/ranking/: __init__.py  ranker.py
patient_similarity/scoring/: __init__.py  age_score.py  event_score.py  final_score.py
patient_similarity/weighting/: __init__.py  base.py  pipeline.py  rarity.py  semantic_support.py
